--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,9 +297,50 @@ body {
 /* section-7 */
 .section-7{
     margin-top: 150px;
+    height: w50px;
 }
-.sec7.div{
-    
+.sec7-div{
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+.sec7-item{
+    width: 60%;
+    background-color: #343434;
+    border-radius: 20px;
+    display: flex;
+}
+.sec7-img{
+    width: 95%;
+    height: 95%;
+    margin-top: 3%;
+    margin-left: 5%;
+    border-bottom-right-radius: 20px;
+}
+.sec7-text{
+    margin-top: 70px;
+    margin-left: 60px;
+}
+.sec7-h2{
+    font-size: 28px;
+    max-width: 240px;
+    font-weight: 300;
+}
+.sec7-btn{
+    height: 32px;
+    width: 132px;
+}
+.sec7-nav{
+    width: 50%;
+}
+
+/* footer */
+.footer{
+    margin-top: 150px;
+    height: 400px;
+}
+.footer-div{
+    display: flex;
 }
 
 /* media */
@@ -357,5 +398,15 @@ body {
         width: 100%;
         margin-left: 25%;
         display: block;
+    }
+    /* section-7 */
+    .section-7{
+        margin-top: 600px;
+    }
+    .sec7-item{
+        display: block;
+    }
+    .sec7-nav{
+        width: 100%;
     }
 }
