--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,6 +347,10 @@ body {
 .fff{
     color: #fff;
 }
+.footer-item{
+    width: 30%;
+    height: 100%;
+}
 
 /* media */
 @media (max-width: 675px) {
